--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install wheel twine flit
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
@@ -29,5 +29,5 @@ jobs:
       run: |
         echo TWINE_USERNAME: $TWINE_USERNAME
         echo TWINE_PASSWORD: $TWINE_PASSWORD
-        python setup.py sdist bdist_wheel
+        flit build
         twine upload --verbose dist/*
