--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,71 @@
+[build-system]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.4,<4", "pytest-runner"]
+
+[project]
+dependencies = [
+  "PyJWT==2.4.0",
+  "ujson==5.4.0",
+  "fastapi==0.92.0",
+  "SQLAlchemy==2.0.3",
+  "opentelemetry-instrumentation-fastapi",
+  "opentelemetry-api",
+  "opentelemetry-sdk",
+  "opentelemetry-exporter-otlp",
+  "opentelemetry-instrumentation",
+  "opentelemetry-instrumentation-fastapi",
+  "opentelemetry-instrumentation-sqlalchemy",
+  "opentelemetry-instrumentation-aio-pika",
+  "python-dotenv",
+  "uvicorn[standard]",
+  "python-jose[cryptography]",
+  "passlib[bcrypt]",
+  "prometheus-fastapi-instrumentator",
+  "asyncpg==0.27.0",
+  "alembic",
+  "yarl==1.8.2",
+  "psycopg2-binary==2.9.5",
+  "envparse",
+  "redis==4.3.4",
+]
+dynamic = ["version", "description"]
+name = "vulcan_ms_core"
+
+[project.optional-dependencies]
+test = [
+  "pytest >=2.7.3",
+  "pytest-cov",
+]
+
+[project.urls]
+Home = "https://github.com/vulcafinance/vulcan_ms_core_package"
+
+[tool.flit.module]
+name = "vulcan"
+
+[tool.flit.sdist]
+exclude = [
+  ".git",
+  ".hg",
+  ".mypy_cache",
+  ".tox",
+  ".venv",
+  "_build",
+  "buck-out",
+  "build",
+  "dist",
+  ".github",
+  ".vscode",
+  "test",
+  "build.sh",
+  ".pre-commit-config.yaml",
+  ".gitignore",
+  ".flake8",
+  ".tool-versions",
+  ".editorconfig",
+]
+
 [tool.black]
-line-length = 89
-include = '\.pyi?$'
 exclude = '''
 /(
     \.git
@@ -14,3 +79,5 @@ exclude = '''
   | dist
 )/
 '''
+include = '\.pyi?$'
+line-length = 89
