--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ max_line_length = 88
 ij_visual_guides = 88
 insert_final_newline = true
 trim_trailing_whitespace = true
+charset = utf-8
 
 [*.{js,py,html}]
 charset = utf-8
@@ -17,6 +18,7 @@ trim_trailing_whitespace = false
 [*.{yml,yaml}]
 indent_style = space
 indent_size = 2
+
 
 [Makefile]
 indent_style = tab
