--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -18,6 +18,11 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+    - uses: szenius/set-timezone@v1.0
+      with:
+        timezoneLinux: "UTC-3"
+        timezoneMacos: "UTC-3"
+        timezoneWindows: "UTC-3"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
