--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -32,6 +32,7 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
+        export VERSION="0.3.0-tes"
         echo TWINE_USERNAME: $TWINE_USERNAME
         echo TWINE_PASSWORD: $TWINE_PASSWORD
         flit build
