feat: generating version from github ref; creating release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "flit_core.buildapi"
-requires = ["flit_core >=3.4,<4", "pytest-runner"]
+requires = ["flit_core >=3.4,<4", "pytest-runner", "pep440", "pytz"]
 
 [project]
 dependencies = [
@@ -63,6 +63,7 @@ exclude = [
   ".flake8",
   ".tool-versions",
   ".editorconfig",
+  "test-version.py",
 ]
 
 [tool.black]
