--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -5,9 +5,8 @@ on:
     branches:
     - main
     - feature-*
-
-  release:
-    types: [created]
+    tags:
+    - "v*.*.*"
 
 jobs:
   deploy:
@@ -19,22 +18,32 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    - uses: szenius/set-timezone@v1.0
-      with:
-        timezoneLinux: "UTC-3"
-        timezoneMacos: "UTC-3"
-        timezoneWindows: "UTC-3"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install wheel twine flit
+
+    - name: Check Version
+      id: check-version
+      env:
+        VERSION: ${{ github.head_ref || github.ref_name }}
+      run: |
+        [[ "${VERSION}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || echo prerelease=true >> $GITHUB_OUTPUT
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "dist/*"
+        token: ${{ secrets.GITHUB_TOKEN }}
+        draft: false
+        prerelease: steps.check-version.outputs.prerelease == 'true'
+
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        VERSION: ${{ github.head_ref || github.ref_name }}
       run: |
-        export VERSION="0.3.0-tes"
-        echo TWINE_USERNAME: $TWINE_USERNAME
-        echo TWINE_PASSWORD: $TWINE_PASSWORD
+        echo VERSION: $VERSION
         flit build
         twine upload --verbose dist/*
