--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheel twine flit
+        pip install wheel twine flit pytz
 
     - name: Check Version
       id: check-version
