--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -28,7 +28,11 @@ jobs:
       env:
         VERSION: ${{ github.head_ref || github.ref_name }}
       run: |
+        git_hash="."$(git rev-parse --short "$GITHUB_SHA")
+        echo "git_hash: "$git_hash
+
         [[ "${VERSION}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || echo prerelease=true >> $GITHUB_OUTPUT
+        [[ "${VERSION}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || echo git_hash=$git_hash >> $GITHUB_OUTPUT
 
     - name: Create Release
       uses: ncipollo/release-action@v1
@@ -36,8 +40,8 @@ jobs:
         artifacts: "dist/*"
         token: ${{ secrets.GITHUB_TOKEN }}
         draft: false
-        commit: ${{ github.head_ref || github.ref_name }}
-        tag: ${{ github.head_ref || github.ref_name }}
+        commit: ${{ github.head_ref || github.ref_name }}${{ steps.check-version.outputs.git_hash }}
+        tag: ${{ github.head_ref || github.ref_name }}${{ steps.check-version.outputs.git_hash }}
         prerelease: steps.check-version.outputs.prerelease == 'true'
 
     - name: Build and publish
