--- a/.github/workflows/build-deploy-package.yml
+++ b/.github/workflows/build-deploy-package.yml
@@ -28,7 +28,7 @@ jobs:
       env:
         VERSION: ${{ github.head_ref || github.ref_name }}
       run: |
-        git_hash="."$(git rev-parse --short "$GITHUB_SHA")
+        git_hash="-"$(git rev-parse --short "$GITHUB_SHA")
         echo "git_hash: "$git_hash
 
         [[ "${VERSION}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || echo prerelease=true >> $GITHUB_OUTPUT
